[package]
name = "logics"
version = "0.0.1"
authors = ["Starlay Finance"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0", default-features = false, features = [
    "psp22",
] }
ink_metadata = "4.0.1"
primitive-types = "0.12.1"

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "openbrush/std", "primitive-types/std","primitive-types/scale-info"]
