[package]
name = "default_interest_rate_model"
version = "0.0.1"
authors = ["Starlay Finance"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { tag = "3.1.1", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
logics = { path = "../../logics", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = [
    "codec",
] }

[lib]
name = "default_interest_rate_model"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logics/std"]
ink-as-dependency = []

[profile.release]
overflow-checks = false
