[package]
name = "manager"
version = "0.0.1"
authors = ["Starlay Finance"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { tag = "3.1.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = [
    "access_control",
] }
logics = { path = "../../logics", default-features = false }

[lib]
name = "manager"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logics/std"]
ink-as-dependency = []

[profile.release]
overflow-checks = false
