[package]
name = "weth_gateway"
version = "0.0.1"
authors = ["Starlay Finance"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.1.1", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable"] }
logics = { path = "../../logics", default-features = false }

[dev-dependencies]
ink_e2e = { version = "4.2" }

[lib]
path = "lib.rs"


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logics/std"]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
