[package]
name = "flashloan_receiver"
version = "0.0.1"
authors = ["Starlay Finance"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.1.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = [
    "psp22",
] }
logics = { path = "../../../logics", default-features = false }

[lib]
name = "flashloan_receiver"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logics/std"]
ink-as-dependency = []
